--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,6 +2,7 @@ en:
   new_relation_type: New Relation Type
   discount_amount: Discount Amount
   related_product_discount: Related Product Discount
+  relation_type: Relation Type
   relation_types: Relation Types
   applies_to: Applies To
   editing_relation_type: Editing Relation Type
